--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ license = { file = "LICENSE" }
 readme = "readme.md"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: GNU GPL",
+    "License :: OSI Approved :: GNU General Public License (GPL)",
     "Private :: Do Not Upload",
 ]
 requires-python = ">=3.13"
@@ -21,5 +21,5 @@ dependencies = [
   "numpy>=2.2.0",
 ]
 
-[tool.setuptools.packages.find]
-where = ["src"]
+[tool.hatch.build.targets.wheel]
+packages = ["src/speckle"]
