--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 requires-python = ">=3.13"
 dependencies = [
   "numpy>=2.2.0",
+  "pillow>=11.0.0",
 ]
 
 [tool.hatch.build.targets.wheel]
